knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity_Attachment__c/Opportunity_Attachment__c.object-meta.xml
<CustomObject>
    <description>Custom Attachments for Opportunity</description>
    <label>Attachment</label>
    <nameField>
        <label>Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>