knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity_Attachment__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Needs Assessment</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Deal Profile</fullName>
            </value>
            <value>
                <fullName>Fee for Service Proposed # Per Patient</fullName>
            </value>
            <value>
                <fullName>Fee Schedule Analysis</fullName>
            </value>
            <value>
                <fullName>MOU</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payer Reimbursement Analysis</fullName>
            </value>
            <value>
                <fullName>Pro Forma</fullName>
            </value>
            <value>
                <fullName>Proforma at Contract Signature</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Provider Coverage Worksheet</fullName>
            </value>
            <value>
                <fullName>Provider Pay Rate / Market Analysis</fullName>
            </value>
            <value>
                <fullName>Risk Venue (Facility &amp; County) Analysis</fullName>
            </value>
            <value>
                <fullName>Volume Analysis Worksheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>