knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity_Attachment__c/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final</label>
    <type>Checkbox</type>
</CustomField>