knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity_Attachment__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+Attachment__c, &quot;View&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>